Generate tags when input is filled

--- a/tests/index.html
+++ b/tests/index.html
@@ -11,6 +11,7 @@
 		<input name="tags" type="hidden" value="item, item 2">
 		<span class="tag">item</span>
 		<span class="tag">item 2</span>
+		<input data-tags>
 	</div>
  -->
 	<input name="input2" value="">
