Adds a tag-wrapper over the tag and its own remove link

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,8 +9,14 @@
 	<!--
 	<div class="tag-container">
 		<input name="tags" type="hidden" value="item, item 2">
-		<span class="tag">item</span>
-		<span class="tag">item 2</span>
+		<div class="tag-wrapper">
+			<span class="tag">item</span>
+			<a class="close>&times;</a>
+		</div>
+		<div class="tag-wrapper">
+			<span class="tag">item 2</span>
+			<a class="close">&times;</a>
+		</div>
 		<input data-tags>
 	</div>
  -->
