Submitting tags - WIP

--- a/tests/index.html
+++ b/tests/index.html
@@ -4,7 +4,11 @@
 	<title>Tests Suite</title>
 </head>
 <body>
-	<input data-tags value="">
+	<form action="tags/show" method="POST">
+		<input name="tags" value="" data-tags>
+		<input name="input2" value="">
+		<input type="submit">
+	</form>
 
 	<!--
 	<div class="tag-container">
@@ -20,7 +24,6 @@
 		<input data-tags>
 	</div>
  -->
-	<input name="input2" value="">
 
 	<script type="text/javascript" src="magicInput.js"></script>
 </body>
