Adds minify files and prepare for npm

--- a/test/acceptance/index.html
+++ b/test/acceptance/index.html
@@ -13,9 +13,9 @@
 	<section id='test'></section>
 	<script src="mocha/mocha.js"></script>
 	<script src="proclaim/lib/proclaim.js"></script>
-	<script src="async-define/async-define.js"></script>
-	<script src="events-amd/events-amd.js"></script>
-	<script src="doc-amd/doc.js"></script>
+	<script src="define-async/async-define.js"></script>
+	<script src="elo7-events-amd/events-amd.js"></script>
+	<script src="elo7-doc-amd/doc.js"></script>
 	<script src="tag.js"></script>
 
 	<script>
